RISDEV-8402
Relevance-windows
*Added relevance fields to opensearch
*Added logic to calculate relevance windows at indexing time
*Updated norm parsing to ignore gegenstandslos and BedingtesInkrafttreten
*Fixed getByWorkEli in NormsRepository because it had the wrong signature. Work to expression is a 1 to many relation.
*Added template that can be used in tests to create Test norm XML
*Extended standard test data to have a consistent 3 expression norm loaded from the template
*Cleaned up testing bucket reset code to match how we reset repositories
*Added relevance window tests
*Fixed out of date test data making other tests fail