@@ -7,41 +7,56 @@ import static de.bund.digitalservice.ris.search.integration.controller.api.testD
 import de.bund.digitalservice.ris.search.models.opensearch.Article;
 import de.bund.digitalservice.ris.search.models.opensearch.Norm;
 import de.bund.digitalservice.ris.search.models.opensearch.TableOfContentsItem;
+import de.bund.digitalservice.ris.search.utils.eli.EliFile;
+import io.pebbletemplates.pebble.PebbleEngine;
+import io.pebbletemplates.pebble.template.PebbleTemplate;
+import java.io.IOException;
+import java.io.StringWriter;
+import java.io.Writer;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 public class NormsTestData {
 
-  public static List<Norm> allDocuments = new ArrayList<>();
+  public static final String NORM_LDML_TEMPLATE = "templates/norm/ldml-base.xml";
 
-  public static List<TableOfContentsItem> nestedToC =
-      List.of(
-          new TableOfContentsItem("art-z1", "1", "Art 1", new ArrayList<>()),
-          new TableOfContentsItem("art-z2", "2", "Art 2", new ArrayList<>()),
-          new TableOfContentsItem(
-              "hauptteil-n1_teil-n1",
-              "Teil 1",
-              "Heading 1",
-              List.of(
-                  new TableOfContentsItem("art-z3", "3", "Art 3", new ArrayList<>()),
-                  new TableOfContentsItem(
-                      "hauptteil-n1_teil-n1_teil-n1",
-                      "Teil 2",
-                      "Heading 2",
-                      List.of(
-                          new TableOfContentsItem("art-z4", "4", "Art 4", new ArrayList<>()),
-                          new TableOfContentsItem(
-                              "hauptteil-n1_teil-n1_teil-n1_teil-n1",
-                              "Teil 3",
-                              "Heading 3",
-                              List.of(
-                                  new TableOfContentsItem(
-                                      "art-z5", "5", "Art 5", new ArrayList<>()),
-                                  new TableOfContentsItem(
-                                      "art-z6", "6", "Art 6", new ArrayList<>()))))))));
+  public static List<TableOfContentsItem> nestedToC = setupNestedToC();
 
-  static {
+  public static List<Norm> allDocuments = setupCommonNormEntities();
+  public static Map<String, String> allNormXml = setupCommonNormXmlFiles();
+
+  private static List<TableOfContentsItem> setupNestedToC() {
+    return List.of(
+        new TableOfContentsItem("art-z1", "1", "Art 1", new ArrayList<>()),
+        new TableOfContentsItem("art-z2", "2", "Art 2", new ArrayList<>()),
+        new TableOfContentsItem(
+            "hauptteil-n1_teil-n1",
+            "Teil 1",
+            "Heading 1",
+            List.of(
+                new TableOfContentsItem("art-z3", "3", "Art 3", new ArrayList<>()),
+                new TableOfContentsItem(
+                    "hauptteil-n1_teil-n1_teil-n1",
+                    "Teil 2",
+                    "Heading 2",
+                    List.of(
+                        new TableOfContentsItem("art-z4", "4", "Art 4", new ArrayList<>()),
+                        new TableOfContentsItem(
+                            "hauptteil-n1_teil-n1_teil-n1_teil-n1",
+                            "Teil 3",
+                            "Heading 3",
+                            List.of(
+                                new TableOfContentsItem("art-z5", "5", "Art 5", new ArrayList<>()),
+                                new TableOfContentsItem(
+                                    "art-z6", "6", "Art 6", new ArrayList<>()))))))));
+  }
+
+  public static List<Norm> setupCommonNormEntities() {
+
     var normTestOne =
         Norm.builder()
             .id("n1")
@@ -109,7 +124,7 @@ public class NormsTestData {
             .expiryDate(LocalDate.now().minusDays(1))
             .build();
 
-    allDocuments.addAll(List.of(normTestOne, normTestTwo, normTestThree));
+    return Arrays.asList(normTestOne, normTestTwo, normTestThree);
   }
 
   public static Norm simple(String id, String content) {
@@ -118,5 +133,58 @@ public class NormsTestData {
         .articleTexts(List.of(content))
         .articles(List.of(Article.builder().name("Article 1").text(content).build()))
         .build();
+  }
+
+  public static Map<String, String> setupCommonNormXmlFiles() {
+    try {
+      Map<String, String> result = new HashMap<>();
+      String work1 = "eli/bund/bgbl-1/1991/s102";
+
+      String work1expression1 = work1 + "/1991-01-01/1/deu/1991-01-01/regelungstext-1.xml";
+      result.put(
+          work1expression1,
+          simpleNormXml(
+              work1expression1, Map.of("inkraft", "1991-01-01", "ausserkraft", "1995-01-01")));
+
+      String work1expression2 = work1 + "/2020-01-01/1/deu/2020-01-01/regelungstext-1.xml";
+      result.put(
+          work1expression2,
+          simpleNormXml(
+              work1expression2, Map.of("inkraft", "2020-01-01", "ausserkraft", "2049-12-31")));
+
+      String work1expression3 = work1 + "/2050-01-01/1/deu/2050-01-01/regelungstext-1.xml";
+      result.put(
+          work1expression3, simpleNormXml(work1expression3, Map.of("inkraft", "2050-01-01")));
+
+      return result;
+    } catch (IOException e) {
+      throw new IllegalArgumentException("Invalid norms being created at test startup.");
+    }
+  }
+
+  public static String simpleNormXml(String fileName, Map<String, Object> context)
+      throws IOException {
+    if (context == null) {
+      context = new HashMap<>();
+    }
+    context = new HashMap<>(context);
+    EliFile eliFile =
+        EliFile.fromString(fileName)
+            .orElseThrow(() -> new IllegalArgumentException("Invalid eli file"));
+    context.put("work_eli", eliFile.getWorkEli().toString());
+    context.put("expression_eli", eliFile.getExpressionEli().toString());
+    context.put("manifestation_eli", eliFile.getManifestationEli().toString());
+    return getXmlFromTemplate(context);
+  }
+
+  private static String getXmlFromTemplate(Map<String, Object> context) throws IOException {
+    PebbleEngine engine = new PebbleEngine.Builder().build();
+    PebbleTemplate compiledTemplate = engine.getTemplate(NORM_LDML_TEMPLATE);
+    if (context == null) {
+      context = new HashMap<>();
+    }
+    Writer writer = new StringWriter();
+    compiledTemplate.evaluate(writer, context);
+    return writer.toString();
   }
 }
